[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exso"
version = "1.0.2"
description = "An analytical framework for the Greek Power&Gas System Operation ('SO') and Market Exchange ('Ex') Data."
authors = [
  { name="Thanos Natsikas", email="ath.natsikas@example.com" },
]
maintainers = [
  {name = "Thanos Natsikas", email="ath.natsikas@example.com"}
]
keywords = ["admie", "ipto", "henex", "energy-markets", "system-operation", "power-exchange", "greece"]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
dependencies = [
  "beautifulsoup4>=4.11.2",
  "colorama>=0.4.6",
  "emoji>=2.5.0",
  "fuzzywuzzy>=0.18.0",
  "haggis>=0.8.0",
  "matplotlib>=3.7.1",
  "numpy>=1.24.2",
  "openpyxl>=3.1.0",
  "pandas>=1.5.3",
  "plotly>=5.13.1",
  "python-Levenshtein>=0.21.0",
  "requests>=2.28.2",
  "rich>=13.3.2",
  "seaborn>=0.12.2",
  "seedir>=0.4.2",
  "tqdm>=4.65.0",
  "tzlocal>=4.3",
  "Unidecode>=1.3.6",
  "xlrd>=1.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]
[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/ThanosGkou/exso"
